--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@tailwindcss/vite": "^4.1.12",
+    "@vidstack/react": "^1.12.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "electron-updater": "^6.3.9",
     "hls.js": "^1.6.10",
     "jotai": "^2.13.1",
     "lucide-react": "^0.539.0",
+    "media-icons": "^1.1.5",
     "motion": "^12.23.12",
     "node-vlc-http": "^1.2.0",
     "react-router": "^7.8.1",
